# Auto-Job-Apply-System

./: .env.example  .env.example.backup  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-minimal.txt  requirements.txt
.github/workflows/: ci.yml
config/: api_config.py  test_users.json
data/: application_data_engineer.json  application_history.json  sample_resume.txt
docs/: index.md
scripts/: init.sql  migrate_data.py  migrate_data_simple.py  run.sh  setup_dev.sh
src/: main.py
src/api/: app.py  google_jobs.py  indeed_api.py  linkedin_api.py  schemas.py
src/app_email/: __init__.py  email_service.py
src/core/: ai_agent.py  application_manager.py  config.py  job_search_engine.py
src/data/: user_manager.py
src/db/: session.py
src/email/: email_service.py
src/models/: application.py  base.py  job.py  resume.py  user.py
src/utils/: helpers.py  logger.py
